# bank-churn-analytics

./: .dockerignore  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.agents/skills/adr-quality-rubric/: SKILL.md
.agents/skills/adr-writing/: SKILL.md
.agents/skills/documentation-governance/: SKILL.md
.agents/skills/engineering-governance/: SKILL.md
artifacts/: decision_tree_pipeline.joblib  gradient_boosting_pipeline.joblib  metadata.json  reference_predictions.csv
docs/: Relatorio.md  Relatorio_Finalizado.md
docs/architecture/: authority-model.md  implementation-traceability.md  repository-diagnosis.md
docs/architecture/adr/: 0001-application-architecture-and-model-orchestration.md  ADR-0001.md
docs/features/: churn-risk-orchestration.md
docs/requirements/functional/: churn-decision-support.md
docs/requirements/non-functional/: application-quality-attributes.md  churn-risk-orchestration.md
notebooks/: 01_eda.ipynb  02_statistical_modeling.ipynb  03_machine_learning.ipynb
skills/architecture/adr-writing/: adr-quality-rubric.md  anti-patterns.md
src/churn_app/: __init__.py  config.py
src/churn_app/domain/: __init__.py  customer.py  interpretation.py  prediction.py  presentation.py  recommendation.py  risk_level.py
src/churn_app/i18n/: __init__.py  catalog.py  locale.py  translator.py
src/churn_app/services/: __init__.py  artifact_loader.py  decision_policy.py  input_builder.py  risk_interpreter.py  (+3 more)
tests/: __init__.py
tests/integration/: __init__.py  test_artifact_loading.py  test_input_builder_contract.py  test_prediction_service.py
tests/unit/: __init__.py  test_artifact_loader.py  test_containerization.py  test_decision_policy.py  test_dependency_boundaries.py  test_i18n.py  test_input_builder.py  test_prediction_service.py  test_presentation_layer.py  test_recommendation_engine.py  test_risk_interpreter.py  test_scaffold_contracts.py  test_streamlit_ui.py
(+10 files in other folders)
