[project]
name = "bank-churn-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "plotly>=6.9.0",
    "scikit-learn>=1.9.0",
    "scipy-stubs~=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
]
