[project]
name = "bank-churn-analytics"
version = "0.1.0"
description = "Academic Streamlit application for bank customer churn risk analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "plotly>=6.9.0",
    "scikit-learn>=1.9.0",
    "scipy-stubs~=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.49.0",
    "tabulate>=0.10.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = ["notebooks/*.ipynb"]

[tool.setuptools.packages.find]
where = ["src"]
